Fixes to tag line letter spacing

--- a/public_html/lowevoice.css
+++ b/public_html/lowevoice.css
@@ -65,8 +65,8 @@ font-size: 18px;
 -webkit-text-fill-color: white;
 -webkit-text-stroke-width: 1px;
 -webkit-text-stroke-color: black;
-transform: scale(1.2, 1);
-letter-spacing: 3px;
+transform: scale(1.3, 1);
+/*letter-spacing: 3px;*/
 margin: 6px 0 0 0;
 }
 
@@ -295,7 +295,6 @@ font-size: 24px !important;
 }
 .tagline {
 font-size: 10px !important;
-letter-spacing: 2px;
 }
 .client {
 width: 54px;
